force-app/main/default/objects/Tenant__c/Tenant__c.object-meta.xml
<CustomObject>
    <description>Details about our tenants will be stored on this object.</description>
    <label>Tenant</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>