force-app/main/default/objects/Tenant__c/fields/Number_of_order__c.field-meta.xml
<CustomField>
    <fullName>Number_of_order__c</fullName>
    <label>Number of order</label>
    <summaryForeignKey>Tenant_Order__c.Tenant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>