force-app/main/default/objects/Tenant__c/fields/Number_of_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tenant__c</fullName>
    <label>Number of Tenant</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>