force-app/main/default/objects/Tenant__c/fields/Web_site__c.field-meta.xml
<CustomField>
    <fullName>Web_site__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>