force-app/main/default/objects/Tenant__c/validationRules/AreaCodeNumeric.validationRule-meta.xml
<ValidationRule>
    <fullName>AreaCodeNumeric</fullName>
    <active>true</active>
    <description>Are code must not be empty and it must be numeric</description>
    <errorConditionFormula>ISBLANK( AreaCode__c )  || NOT(ISNUMBER( AreaCode__c )) || 

 LEN( AreaCode__c )  &lt;&gt; 5</errorConditionFormula>
    <errorDisplayField>AreaCode__c</errorDisplayField>
    <errorMessage>Are code must not be empty and it must be numeric</errorMessage>
</ValidationRule>