force-app/main/default/objects/Tenant__c/validationRules/NumericPhoneNumberRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NumericPhoneNumberRequired</fullName>
    <active>true</active>
    <description>Phone field must contain numbers only</description>
    <errorConditionFormula>NOT( ISNUMBER( Phone__c ) )</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone field must contain numbers only</errorMessage>
</ValidationRule>